исправления 1 GIT-теста

--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
       <section>
         <article class="main__content-text">
           <p class="title-decor">А можно в картинках?</p>
-          <picture class="gallery">
-            <img loading="lazy" class="picture1" src="/images/sunset.png" alt="закат">
-            <img loading="lazy" class="picture2" src="/images/ice-cream.png" alt="мороженное">
-            <img loading="lazy" class="picture3" src="/images/tape.png" alt="касета">
-            <img loading="lazy" class="picture4" src="/images/books.png" alt="книги">
-            <img loading="lazy" class="picture5" src="/images/street.png" alt="улица">
-          </picture>
+          <div class="gallery">
+              <img loading="lazy" class="picture1" src="/images/sunset.png" alt="Закат на берегу моря">
+              <img loading="lazy" class="picture2" src="/images/ice-cream.png" alt="Мороженное с котиками">
+              <img loading="lazy" class="picture3" src="/images/tape.png" alt="Музыкальная касета">
+              <img loading="lazy" class="picture4" src="/images/books.png" alt="Стопка книг">
+              <img loading="lazy" class="picture5" src="/images/street.png" alt="Улица в фиолетовых тонах">
+          </div>
         </article>
       </section>
     </main>
